# rust_workspace

./: .gitignore
fibonacci/src/: main.rs
gcd/src/: main.rs
guessing_game/src/: main.rs
hangman/: Cargo.toml
hangman/src/: main.rs
isbn/: Cargo.toml
isbn/src/: main.rs
prime_numbers/: Cargo.toml
prime_numbers/src/: main.rs
reverse_number/: Cargo.toml  rustfmt.toml
reverse_number/src/: main.rs
snake/: Cargo.toml
snake/src/: draw.rs  game.rs  main.rs  snake.rs
