[package]
name = "snake_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
piston_window = "0.120.0"
find_folder = "0.3.0"

[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
